Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/video/in_arbeit/pp/navigation.pp


function gst_navigation_query_get_type(query:PGstQuery):TGstNavigationQueryType;cdecl;external;
function gst_navigation_query_new_commands:PGstQuery;cdecl;external;
procedure gst_navigation_query_set_commands(query:PGstQuery; n_cmds:Tgint; args:array of const);cdecl;external;
procedure gst_navigation_query_set_commands(query:PGstQuery; n_cmds:Tgint);cdecl;external;
procedure gst_navigation_query_set_commandsv(query:PGstQuery; n_cmds:Tgint; cmds:PGstNavigationCommand);cdecl;external;
function gst_navigation_query_parse_commands_length(query:PGstQuery; n_cmds:Pguint):Tgboolean;cdecl;external;
function gst_navigation_query_parse_commands_nth(query:PGstQuery; nth:Tguint; cmd:PGstNavigationCommand):Tgboolean;cdecl;external;
function gst_navigation_query_new_angles:PGstQuery;cdecl;external;
procedure gst_navigation_query_set_angles(query:PGstQuery; cur_angle:Tguint; n_angles:Tguint);cdecl;external;
function gst_navigation_query_parse_angles(query:PGstQuery; cur_angle:Pguint; n_angles:Pguint):Tgboolean;cdecl;external;
{ Element messages  }
{*
 * GstNavigationMessageType:
 * @GST_NAVIGATION_MESSAGE_INVALID: Returned from
 * gst_navigation_message_get_type() when the passed message is not a
 * navigation message.
 * @GST_NAVIGATION_MESSAGE_MOUSE_OVER: Sent when the mouse moves over or leaves a
 * clickable region of the output, such as a DVD menu button.
 * @GST_NAVIGATION_MESSAGE_COMMANDS_CHANGED: Sent when the set of available commands
 * changes and should re-queried by interested applications.
 * @GST_NAVIGATION_MESSAGE_ANGLES_CHANGED: Sent when display angles in a multi-angle
 * feature (such as a multiangle DVD) change - either angles have appeared or
 * disappeared.
 * @GST_NAVIGATION_MESSAGE_EVENT: Sent when a navigation event was not handled
 * by any element in the pipeline (Since: 1.6)
 *
 * A set of notifications that may be received on the bus when navigation
 * related status changes.
  }
type
  PGstNavigationMessageType = ^TGstNavigationMessageType;
  TGstNavigationMessageType =  Longint;
  Const
    GST_NAVIGATION_MESSAGE_INVALID = 0;
    GST_NAVIGATION_MESSAGE_MOUSE_OVER = 1;
    GST_NAVIGATION_MESSAGE_COMMANDS_CHANGED = 2;
    GST_NAVIGATION_MESSAGE_ANGLES_CHANGED = 3;
    GST_NAVIGATION_MESSAGE_EVENT = 4;
;

function gst_navigation_message_get_type(message:PGstMessage):TGstNavigationMessageType;cdecl;external;
function gst_navigation_message_new_mouse_over(src:PGstObject; active:Tgboolean):PGstMessage;cdecl;external;
function gst_navigation_message_parse_mouse_over(message:PGstMessage; active:Pgboolean):Tgboolean;cdecl;external;
function gst_navigation_message_new_commands_changed(src:PGstObject):PGstMessage;cdecl;external;
function gst_navigation_message_new_angles_changed(src:PGstObject; cur_angle:Tguint; n_angles:Tguint):PGstMessage;cdecl;external;
function gst_navigation_message_parse_angles_changed(message:PGstMessage; cur_angle:Pguint; n_angles:Pguint):Tgboolean;cdecl;external;
function gst_navigation_message_new_event(src:PGstObject; event:PGstEvent):PGstMessage;cdecl;external;
function gst_navigation_message_parse_event(message:PGstMessage; event:PPGstEvent):Tgboolean;cdecl;external;
{ event parsing functions  }
{*
 * GstNavigationEventType:
 * @GST_NAVIGATION_EVENT_INVALID: Returned from
 * gst_navigation_event_get_type() when the passed event is not a navigation event.
 * @GST_NAVIGATION_EVENT_KEY_PRESS: A key press event. Use
 * gst_navigation_event_parse_key_event() to extract the details from the event.
 * @GST_NAVIGATION_EVENT_KEY_RELEASE: A key release event. Use
 * gst_navigation_event_parse_key_event() to extract the details from the event.
 * @GST_NAVIGATION_EVENT_MOUSE_BUTTON_PRESS: A mouse button press event. Use
 * gst_navigation_event_parse_mouse_button_event() to extract the details from the
 * event.
 * @GST_NAVIGATION_EVENT_MOUSE_BUTTON_RELEASE: A mouse button release event. Use
 * gst_navigation_event_parse_mouse_button_event() to extract the details from the
 * event.
 * @GST_NAVIGATION_EVENT_MOUSE_MOVE: A mouse movement event. Use
 * gst_navigation_event_parse_mouse_move_event() to extract the details from the
 * event.
 * @GST_NAVIGATION_EVENT_COMMAND: A navigation command event. Use
 * gst_navigation_event_parse_command() to extract the details from the event.
 * @GST_NAVIGATION_EVENT_MOUSE_SCROLL: A mouse scroll event. Use
 * gst_navigation_event_parse_mouse_scroll_event() to extract the details from
 * the event. (Since: 1.18)
 * @GST_NAVIGATION_EVENT_TOUCH_DOWN: An event describing a new touch point,
 * which will be assigned an identifier that is unique to it for the duration
 * of its movement on the screen. Use gst_navigation_event_parse_touch_event()
 * to extract the details from the event. (Since: 1.22)
 * @GST_NAVIGATION_EVENT_TOUCH_MOTION: An event describing the movement of an
 * active touch point across the screen. Use
 * gst_navigation_event_parse_touch_event() to extract the details from the
 * event. (Since: 1.22)
 * @GST_NAVIGATION_EVENT_TOUCH_UP: An event describing a removed touch point.
 * After this event, its identifier may be reused for any new touch points. Use
 * gst_navigation_event_parse_touch_up_event() to extract the details from the
 * event. (Since: 1.22)
 * @GST_NAVIGATION_EVENT_TOUCH_FRAME: An event signaling the end of a sequence
 * of simultaneous touch events. (Since: 1.22)
 * @GST_NAVIGATION_EVENT_TOUCH_CANCEL: An event cancelling all currently active
 * touch points. (Since: 1.22)
 * @GST_NAVIGATION_EVENT_MOUSE_DOUBLE_CLICK: A mouse button double click event. Use
 * gst_navigation_event_parse_mouse_button_event() to extract the details from the
 * event. (Since: 1.26)
 *
 * Enum values for the various events that an element implementing the
 * GstNavigation interface might send up the pipeline. Touch events have been
 * inspired by the libinput API, and have the same meaning here.
  }
{*
   * GST_NAVIGATION_EVENT_MOUSE_SCROLL:
   *
   * A mouse scroll event. Use gst_navigation_event_parse_mouse_scroll_event()
   * to extract the details from the event.
   *
   * Since: 1.18
    }
{*
   * GST_NAVIGATION_EVENT_TOUCH_DOWN:
   *
   * An event describing a new touch point, which will be assigned an identifier
   * that is unique to it for the duration of its movement on the screen.
   * Use gst_navigation_event_parse_touch_event() to extract the details
   * from the event.
   *
   * Since: 1.22
    }
{*
   * GST_NAVIGATION_EVENT_TOUCH_MOTION:
   *
   * An event describing the movement of an active touch point across
   * the screen. Use gst_navigation_event_parse_touch_event() to extract
   * the details from the event.
   *
   * Since: 1.22
    }
{*
   * GST_NAVIGATION_EVENT_TOUCH_UP:
   *
   * An event describing a removed touch point. After this event,
   * its identifier may be reused for any new touch points.
   * Use gst_navigation_event_parse_touch_up_event() to extract the details
   * from the event.
   *
   * Since: 1.22
    }
{*
   * GST_NAVIGATION_EVENT_TOUCH_FRAME:
   *
   * An event signaling the end of a sequence of simultaneous touch events.
   *
   * Since: 1.22
    }
{*
   * GST_NAVIGATION_EVENT_TOUCH_CANCEL:
   *
   * An event cancelling all currently active touch points.
   *
   * Since: 1.22
    }
{*
   * GST_NAVIGATION_EVENT_MOUSE_DOUBLE_CLICK:
   *
   * A mouse button double click event.
   * Use gst_navigation_event_parse_mouse_button_event() to extract the details
   * from the event.
   *
   * Since: 1.26
    }
type
  PGstNavigationEventType = ^TGstNavigationEventType;
  TGstNavigationEventType =  Longint;
  Const
    GST_NAVIGATION_EVENT_INVALID = 0;
    GST_NAVIGATION_EVENT_KEY_PRESS = 1;
    GST_NAVIGATION_EVENT_KEY_RELEASE = 2;
    GST_NAVIGATION_EVENT_MOUSE_BUTTON_PRESS = 3;
    GST_NAVIGATION_EVENT_MOUSE_BUTTON_RELEASE = 4;
    GST_NAVIGATION_EVENT_MOUSE_MOVE = 5;
    GST_NAVIGATION_EVENT_COMMAND = 6;
    GST_NAVIGATION_EVENT_MOUSE_SCROLL = 7;
    GST_NAVIGATION_EVENT_TOUCH_DOWN = 8;
    GST_NAVIGATION_EVENT_TOUCH_MOTION = 9;
    GST_NAVIGATION_EVENT_TOUCH_UP = 10;
    GST_NAVIGATION_EVENT_TOUCH_FRAME = 11;
    GST_NAVIGATION_EVENT_TOUCH_CANCEL = 12;
    GST_NAVIGATION_EVENT_MOUSE_DOUBLE_CLICK = 13;
;
